--- a/auto_caller/package.json
+++ b/auto_caller/package.json
@@ -39,6 +39,7 @@
     "expo-web-browser": "~14.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.56.4",
     "react-native": "0.79.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.24.0",
